--- a/app/views/main.html
+++ b/app/views/main.html
@@ -16,6 +16,13 @@
   <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
+
+<div class="row">
+  <p>
+    <button ng-click="goFullscreen()">Enable/Disable fullscreen</button>
+  </p>
+</div>
+
 <div class="row marketing">
   <h4>HTML5 Boilerplate</h4>
   <p>
