Changed Gruntfile for HTML5 History API, rewrites fixed

--- a/app/views/demo2.html
+++ b/app/views/demo2.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo! main</h1>
+  <h1>'Allo, 'Allo! demo2</h1>
   <p class="lead">
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     Always a pleasure scaffolding your apps.
