--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,47 +1,23 @@
-<div class="header">
-  <ul class="nav nav-pills pull-right">
-    <li class="active"><a ng-href="/">Home</a></li>
-    <li><a ng-href="#">About</a></li>
-    <li><a ng-href="#">Contact</a></li>
-    <li><a ng-href="#/demo1">#/demo1</a></li>
-    <li><a ng-href="#/demo2">#/demo2</a></li>
-    <li><a ng-href="/demo1">/demo1</a></li>
-    <li><a ng-href="/demo2">/demo2</a></li>
-  </ul>
-  <h3 class="text-muted">angular on coffee</h3>
-</div>
-
-<div class="jumbotron">
-  <h1>'Allo, 'Allo! main</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
 
 <div class="row">
-  <p>
-    <button ng-click="goFullscreen()">Enable/Disable fullscreen</button>
-  </p>
+  <div class="jumbotron">
+    <h1>Angular on Coffee</h1>
+    <h2>AngularJS written with CoffeeScript</h2>
+  </div>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="row">
+  <div class="col-md-6" style="padding-left:0px;" >
+    <div class="well">
+      <a ng-href="#/slide-1" class="btn btn-lg btn-success" style="width:100%;">Start presentation</a>
+    </div>
+  </div>
+  <div class="col-md-6 well" >
+    <button class="btn btn-lg btn-primary" ng-click="goFullscreen()" style="width:100%;">Enable fullscreen</button>
+  </div>
 </div>
 
-<div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+<div class="footer" style="text-align:center;" >
+  Copyright &copy by Matija Stepanić - Zagreb FER - 2014 - Master degree Seminar
 </div>
+
