--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,6 +17,15 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-md-6" style="padding-left:0px;" >
+    <p><img src="images/angular.png" width="300" style="margin-left:20px;" ></p>
+  </div>
+  <div class="col-md-6" >
+    <p><img src="images/coffeescript.png" width="300" style="margin-top:15px; margin-left:10px;" ></p>
+  </div>
+</div>
+
 <div class="footer" style="text-align:center;" >
   Copyright &copy by Matija Stepanić - Zagreb FER - 2014 - Master degree Seminar
 </div>
