--- a/app/views/partial/slide-1.html
+++ b/app/views/partial/slide-1.html
@@ -1,1 +1,7 @@
-slajd 1 ja sam snico
+<h2>&bull; <b>CoffeeScript</b> is a little language that compiles into <b>JavaScript</b>. </h2>
+<h2>&bull; The golden rule of <b>CoffeeScript</b> is: "It's just JavaScript". </h2>
+<h2>&bull; It adds syntactic sugar inspired by <b>Ruby</b>, <b>Python</b> and <b>Haskell</b>. </h2>
+
+<br>
+
+<h3 class="well"><code>sudo npm install -g coffee-script</code></h3>
