--- a/app/views/partial/slide-2.html
+++ b/app/views/partial/slide-2.html
@@ -1,1 +1,7 @@
-slajd 2
+<h2>&bull; <b>JavaScript</b> is not most beautiful language.</h2>
+<h2>&bull; <b>CoffeeScript</b> makes <b>JavaScript</b> more nice and easier to maintain.</h2>
+<br>
+<h2>&bull; <b>JavaScript</b> is the only language which can be executed in browser, so it can't be replaced with some alternative, but using preprocessor language for example <b>CoffeeScript</b> can be some alternative way.</h2>
+
+
+
