--- a/app/views/partial/slide-4.html
+++ b/app/views/partial/slide-4.html
@@ -1,1 +1,61 @@
-slajd 4
+<div class="row">
+  <div class="col-md-6" style="padding-left:0px;" >
+    <h2>CoffeeScript</h2>
+  </div>
+  <div class="col-md-6" >
+    <h2>JavaScript</h2>
+  </div>
+</div>
+
+<script type="text/ng-template" id="slide4Code1">
+square = (x) -> x * x
+
+cube = (x) -> square(x) * x
+
+
+fill = (container, liquid = "coffee") ->
+  "Filling the #{container} with #{liquid}"
+
+
+$('.account').attr class: 'active'
+
+console.log object.class
+</script>
+
+<script type="text/ng-template" id="slide4Code2">
+var cube, square;
+
+square = function(x) {
+  return x * x;
+};
+
+cube = function(x) {
+  return square(x) * x;
+};
+
+
+var fill;
+
+fill = function(container, liquid) {
+  if (liquid == null) {
+    liquid = "coffee";
+  }
+  return "Filling the " + container + " with " + liquid + "...";
+};
+
+
+$('.account').attr({
+  "class": 'active'
+});
+
+console.log(object["class"]);
+</script>
+
+<div class="row">
+  <div class="col-md-6" style="padding-left:0px;" >
+    <div hljs include="'slide4Code1'" language="coffeescript"></div>
+  </div>
+  <div class="col-md-6" >
+    <div hljs include="'slide4Code2'" language="javascript"></div>
+  </div>
+</div>
