--- a/app/views/slide.html
+++ b/app/views/slide.html
@@ -1,4 +1,6 @@
 
-<h1>{{slide.title}}</h1>
+<h1>{{slide.id}} # <span ng-bind-html="slide.title | strReplace"></span></h1>
+
+<br>
 
 <div ng-include="slide.view" ></div>
