Almost done 24th slide Angular - Tips and tricks

--- a/app/views/partial/slide-15.html
+++ b/app/views/partial/slide-15.html
@@ -1,4 +1,5 @@
-<h1>Superheroic JavaScript MVW Framework</h1>
+<h1>Superheroic JavaScript <a ng-click="showWhatever=!showWhatever" >MVW</a> Framework</h1>
+<h2 style="font-weight:bold; color:red" ng-show="showWhatever">Whatever :) MVC or MVVM or MVP</h2>
 <h2>AngularJS lets you extend HTML vocabulary for your application.</h2>
 <h2>AngularJS is a toolset for building the framework most suited to your application development.</h2>
 
