--- a/app/views/partial/slide-23.html
+++ b/app/views/partial/slide-23.html
@@ -1,3 +1,9 @@
+
+<h2>&bull; AngularJS official GUIDE and DOCS<br>
+ &nbsp; &nbsp; <a href="https://docs.angularjs.org/guide" target="_blank">https://docs.angularjs.org/guide</a><br>
+ &nbsp; &nbsp; <a href="https://docs.angularjs.org/api" target="_blank">https://docs.angularjs.org/api</a></h2>
+
+
 <h2>&bull; Naming convention - don't use prefix $ and $$ <br>
  &nbsp; &nbsp; $ for Angular built-in services <br>
  &nbsp; &nbsp; $$ for Angular private</h2>
