Finished presentation slide 32

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,22 @@
 
 <div class="row">
-  <div class="jumbotron">
+  <div class="jumbotron" style="margin-bottom:0px; ">
     <h1>Angular on Coffee</h1>
     <h2>AngularJS written with CoffeeScript</h2>
+
   </div>
 </div>
+
+<h3 style="text-align:center">
+  Matija Stepanić - 0036450111 - FER Croatia
+  <br>
+  <a href="mailto:stepanic.matija@gmail.com" >stepanic.matija@gmail.com</a>
+  <br>
+  <br>
+  Mentor
+  <br>
+  prof. dr. sc. Gordan Gledec
+</h3>
 
 <div class="row">
   <div class="col-md-6" style="padding-left:0px;" >
