Fixed CoffeScript slides

--- a/app/views/partial/slide-14.html
+++ b/app/views/partial/slide-14.html
@@ -7,4 +7,4 @@
 
 <br>
 <h2>&bull; Safety wrapper by default </h2>
-<h3 class="well"><code>(function(){ ... }).call(this);;</code></h3>
+<h3 class="well"><code>(function(){ ... }).call(this);</code></h3>
