Added github link on qa slide

--- a/app/views/partial/slide-31.html
+++ b/app/views/partial/slide-31.html
@@ -5,4 +5,15 @@
   <div class="col-md-12" style="padding-left:0px; text-align:center" >
     <img src="images/qa.jpg" style="width:60%">
   </div>
+
+  <div class="col-md-12" style="padding-left:0px; text-align:center" >
+
+    <h1>Download Presentation App</h1>
+
+    <h1><a href="https://github.com/stepanic/angular-on-coffee" target="_blank">https://github.com/stepanic/angular-on-coffee</a></h1>
+
+    <a href="https://github.com/stepanic/angular-on-coffee" target="_blank"><img src="images/github-download.png" width="40%" ></a>
+
+  </div>
+
 </div>
