--- a/app/views/partial/slide-31.html
+++ b/app/views/partial/slide-31.html
@@ -3,7 +3,7 @@
 
 <div class="row" >
   <div class="col-md-12" style="padding-left:0px; text-align:center" >
-    <img src="images/qa.jpg" style="width:60%">
+    <h1 style="font-size:72px;">Q & A</h1>
   </div>
 
   <div class="col-md-12" style="padding-left:0px; text-align:center" >
